--- a/index.html
+++ b/index.html
@@ -1,165 +1,30 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CreditCompass | מצפן אשראי</title>
-  <style>
-    body {
-      margin: 0; font-family: 'Heebo', sans-serif;
-      background: #111; color: #fff; direction: rtl;
-    }
-    a { color: #f9c74f; text-decoration: none; }
-    header.logo {
-      background: #000; color: #f9c74f; text-align: center;
-      padding: 1rem;
-    }
-    header.logo .en { font-size: 2rem; display: block; }
-    header.logo .he { font-size: 1.5rem; margin-top: 0.25rem; }
-
-    /* טאבים ראשיים */
-    nav.tabs {
-      display: flex; background: #222;
-    }
-    nav.tabs button {
-      flex: 1; padding: .75rem; background: #222;
-      border: none; color: #fff; cursor: pointer;
-      font-size: 1rem;
-    }
-    nav.tabs button.active {
-      background: #f9c74f; color: #000;
-    }
-
-    .container { max-width: 900px; margin: 0 auto; padding: 1rem; }
-
-    /* משכנתא ושאר הטפסים */
-    .tab-content > div { display: none; }
-    .tab-content > div.active { display: block; }
-
-    fieldset {
-      border: 1px solid #444; padding: 1rem;
-      margin-bottom: 1rem; background: #1a1a1a;
-    }
-    legend { color: #f9c74f; }
-
-    label, input, select, button {
-      display: block; width: 100%; margin-bottom: .5rem;
-    }
-    input, select {
-      padding: .5rem; border: 1px solid #444;
-      background: #222; color: #fff;
-    }
-    button.calculate {
-      padding: .75rem; background: #f9c74f;
-      color: #000; font-size: 1.1rem; border: none;
-      cursor: pointer;
-    }
-    .results {
-      background: #000; padding: 1rem;
-      border: 1px solid #444; margin-top: 1rem;
-      white-space: pre-wrap; color: #f9c74f;
-    }
-  </style>
+  <title>CreditCompass – מחשבונים פיננסיים</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-  <header class="logo">
-    <span class="en">CreditCompass</span>
-    <span class="he">מצפן אשראי</span>
+  <header>
+    <h1>CreditCompass</h1>
   </header>
-
-  <nav class="tabs">
-    <button data-tab="mortgage" class="active">משכנתא</button>
-    <button data-tab="eligibility">זכאות</button>
+  <nav id="nav">
+    <button data-calc="mortgage" class="active">משכנתא</button>
+    <button data-calc="loan">הלוואה</button>
+    <button data-calc="pension">פנסיה</button>
+    <button data-calc="investment">השקעות</button>
+    <button data-calc="budget">תקציב</button>
+    <button data-calc="salary">שכר נטו</button>
+    <button data-calc="tax">מסים</button>
+    <button data-calc="insurance">ביטוח חיים</button>
   </nav>
+  <main id="main"></main>
+  <footer>
+    © 2025 CreditCompass
+  </footer>
 
-  <div class="container tab-content">
-
-    <!-- ======= מחשבון משכנתא ======= -->
-    <div id="mortgage" class="active">
-      <!-- העתקו לכאן את הטופס והמקטעים של מחשבון המשכנתא הקיים שלכם -->
-      <!-- לדוגמה: -->
-      <fieldset>
-        <legend>מחשבון משכנתא (דוגמה)</legend>
-        <label for="loanAmount">סכום הלוואה</label>
-        <input id="loanAmount" type="number" placeholder="₪">
-
-        <label for="loanTerm">תקופה בשנים</label>
-        <input id="loanTerm" type="number" placeholder="שנים">
-
-        <label for="loanRate">ריבית שנתית (%)</label>
-        <input id="loanRate" type="number" step="0.01">
-
-        <button class="calculate" onclick="calculateMortgage()">חשב משכנתא</button>
-      </fieldset>
-      <div id="mortgageResults" class="results" style="display:none;"></div>
-    </div>
-
-    <!-- ======= מחשבון זכאות ======= -->
-    <div id="eligibility">
-      <form id="form-family">
-        <fieldset>
-          <legend>נתוני משפחה</legend>
-          <label for="marry_years">שנות נישואין</label>
-          <input id="marry_years" type="number" min="0">
-
-          <label for="children">מספר ילדים עד גיל 21</label>
-          <input id="children" type="number" min="0">
-
-          <!-- הוסיפו כאן שדות נוספים לפי הקוד שסיפקנו -->
-        </fieldset>
-        <button class="calculate" onclick="calculateFamily()">חשב זכאות</button>
-      </form>
-      <form id="form-single" style="display:none;">
-        <fieldset>
-          <legend>נתוני רווק/ה</legend>
-          <label for="age">גיל</label>
-          <input id="age" type="number" min="18">
-          <!-- הוסיפו כאן שדות רווק -->
-        </fieldset>
-        <button class="calculate" onclick="calculateSingle()">חשב זכאות</button>
-      </form>
-      <div id="eligibilityResults" class="results" style="display:none;"></div>
-    </div>
-
-  </div>
-
-  <script>
-    // ניווט בין טאבים
-    document.querySelectorAll('nav.tabs button').forEach(btn=>{
-      btn.addEventListener('click', ()=>{
-        document.querySelectorAll('nav.tabs button').forEach(b=>b.classList.remove('active'));
-        btn.classList.add('active');
-        let tab = btn.dataset.tab;
-        document.querySelectorAll('.tab-content > div').forEach(div=>{
-          div.id===tab
-            ? div.classList.add('active')
-            : div.classList.remove('active');
-        });
-        // אפס תוצאות
-        document.querySelectorAll('.results').forEach(r=>r.style.display='none');
-      });
-    });
-
-    // פונקציות חישוב לדוגמה
-    function calculateMortgage(){
-      let P=+loanAmount.value, n=loanTerm.value*12, r=loanRate.value/100/12;
-      let m = P * r / (1 - Math.pow(1+r, -n));
-      mortgageResults.textContent = `החזר חודשי: ₪${m.toFixed(0)}`;
-      mortgageResults.style.display='block';
-    }
-    function calculateFamily(){
-      let score = +marry_years.value*10 + +children.value*350;
-      let ok = score >= 600;
-      eligibilityResults.textContent = `ניקוד: ${score}\nזכאים: ${ok?"כן":"לא"}`;
-      eligibilityResults.style.display='block';
-    }
-    function calculateSingle(){
-      let score = +age.value*5 + +siblings.value*50;
-      let ok = score >= 600;
-      eligibilityResults.textContent = `ניקוד: ${score}\nזכאים: ${ok?"כן":"לא"}`;
-      eligibilityResults.style.display='block';
-    }
-  </script>
+  <script type="module" src="js/app.js"></script>
 </body>
 </html>
